Update vignette, readme and QC report texts

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,16 @@ RiboMethSeq is an RNAseq-based approach to analyze 2'O-ribose methylation (2'Ome
 
 rRMSAnalyzer is an R package that provides a set of easy-to-use functions to evaluate 2'Ome levels by computing C-scores from RiboMethSeq read end counts as input.
 
-Adjust for batch effect, provide visualization capabilities, provide a table of annotated human rRNA sites and allow export of a table of C-scores. The package provides a semi-automated quality control report, provides analysis capabilities (i.e., unsupervised and supervised analysis, identification of sites differentially 2'Ome between conditions).
+Available features (version 2) : 
+
+- C-score computation (using either mean or median for the window of neighboring positions)
+- Batch effect adjustment with CombatSeq
+- Different visualizations to compare samples or sites
+- Include a table of annotated human rRNA sites 
+- Export of computed C-scores into a dataframe 
+- Semi-automated quality control report
+
+These features are more explained in details here : 
 
 > **Note** We have also developed a [dedicated Nextflow pipeline](https://github.com/RibosomeCRCL/ribomethseq-nf) to process the data from sequencing output (fastq files) to useful raw data for rRMSAnalyzer (read end counts).
 
